# rust-query

./: .env.example  .gitignore  Cargo.toml  README.md
rust-query-lambda/: Cargo.toml
src/: connect.rs  lib.rs  main.rs
