[package]
name = "rust-query-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
dotenv = "0.15.0"
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
r2d2_postgres = "^0.18.1"
r2d2 = "^0.8.10"
aws-sdk-secretsmanager = "1.7.0"
serde = "^1.0.193"
rust_decimal = { version = "1.32", features = ["db-postgres"] }
clap = { version = "~4.4", features = ["derive"] }
env_logger = "0.9.0"
serde_json = "1.0.111"
lambda = "0.0.1"
cargo-lambda = "1.0.1"
